# devhive

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVHIVE_AGENT.md  DYNAMIC_ROUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  MEMORY_OPTIMIZATION_GUIDE.md  PARALLEL_DEVELOPMENT.md  README.md  README_MCP.md  TASK_IMPLEMENTATION_SUMMARY.md  WORKFLOW_MANUAL.md  install.sh  main.py  pyproject.toml  requirements.txt  setup.py  update-skills.sh
.github/workflows/: release.yml
agents/: devhive.md
community_skills/a11y-wcag-validator/: SKILL.md
community_skills/agile-scrum-master/: SKILL.md
community_skills/agile-user-stories/: SKILL.md
community_skills/architecture-patterns/: SKILL.md
community_skills/clean-code/: SKILL.md
community_skills/clean-code-principles/: SKILL.md
community_skills/cloud-architect/: SKILL.md
community_skills/code-quality-auditor/: SKILL.md
community_skills/compliance-checker/: SKILL.md
community_skills/db-optimization-expert/: SKILL.md
community_skills/frontend-design/: SKILL.md
community_skills/iac-expert/: SKILL.md
community_skills/load-testing-expert/: SKILL.md
community_skills/owasp-top-10-auditor/: SKILL.md
community_skills/qa-automation-expert/: SKILL.md
community_skills/requirements-analyst/: SKILL.md
community_skills/responsive-design-expert/: SKILL.md
devhive/: cli.py  server.py
devhive_cli/: __init__.py  main.py  templates_backend.py
mcp_server/: cli.py  server.py
skills/: devhive_workflow.md
templates/: AGENTS.backend.md  AGENTS.frontend.md
tests/: test_parallel_development.py
(+119 files in other folders)
