[project]
name = "devhive"
version = "0.1.4"
description = "DevHive MCP Server"
requires-python = ">=3.10"

dependencies = [
    # "mcp"
]

[project.scripts]
devhive = "mcp_server.server:main"
devhive = "mcp_server.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"