[project]
name = "devhive"
version = "0.1.8"
description = "DevHive MCP Server"
requires-python = ">=3.10"

dependencies = [
    "mcp"
]

[project.scripts]
devhive_mcp = "mcp_server.server:main"
devhive = "mcp_server.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"