[project]
name = "devhive"
version = "0.1.20"
description = "DevHive MCP Server"
requires-python = ">=3.10"

dependencies = [
    "mcp",
    "tiktoken>=0.5.0"
]

[project.scripts]
devhive_mcp = "devhive.server:main"
devhive = "devhive.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
devhive = ["skills/*.md", "skills/*/*.md"]

[tool.setuptools.packages.find]
where = ["."]
include = ["devhive*", "DEVHIVE_AGENT"]